--- a/index.html
+++ b/index.html
@@ -74,27 +74,29 @@
         box-sizing: border-box;
         margin-left: 384px;
       }
-      .navbar {
-        font-family: 'Comfortaa', cursive;
+      .navbar {  
         display: flex;
-        justify-content: center;
-        align-items: center;
         background-color: white;
         box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
         position: fixed;
         bottom: 0;
-        width: 100%;       
-        padding: 8px;
+        width: 100%;  
       }
-      .navbar a {
-        display: inline-block;       
+      .navlink {
+        font-family: 'Comfortaa', cursive;
+        display: flex;
+        justify-content: center;
+        width: 100%;
       }
-      @media (max-width: 480px) {
-        .navbar img {
-          display: block;
-          margin: 0 auto;
-        }
+      .navlink a {
+        margin-left: 128px;
+        margin-right: 128px;
+        color: deepskyblue;
       }
+      .navbar a:link { text-decoration: none; }
+      .navbar a:visited { text-decoration: none; }
+      .navbar a:hover { text-decoration: none; }
+      .navbar a:active { text-decoration: none; }
     </style>
   </head>
   <body>
@@ -143,8 +145,10 @@
     </div>-->
     </div>
     <div class="navbar">
+      <div class="navlink">
         <a href="mailto:e.batas@outlook.com"><h2>email</h2></a>
         <a href="https://telegram.me/batas89"><h2>telegram</h2></a>
+      </div>
     </div>
   </body>
 </html>
