--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <style>
       /* Add your CSS styles here */
       html {
-        background: url(img/white-background-with-blue-tech-hexagon_1017-19366.webp) no-repeat center center fixed; 
+        background: url(.img/white-background-with-blue-tech-hexagon_1017-19366.webp) no-repeat center center fixed; 
         -webkit-background-size: cover;
         -moz-background-size: cover;
         -o-background-size: cover;
@@ -103,7 +103,7 @@
     <div class="container">
     <h1>Eleftherios Batas</h1>
     <div class="center-image">
-      <img src="img/296098902_10159839234717870_5671165924911182498_n.jpg" alt="Your Image">
+      <img src=".img/296098902_10159839234717870_5671165924911182498_n.jpg" alt="Your Image">
     </div>
       <div>
         <h2>Unified Communications Engineer, BSc</h2>
@@ -111,32 +111,32 @@
     <div class="small-images">
       <a href="https://www.facebook.com/lef.batas" target="_blank">
         <div class="small-image">
-          <img src="img/facebook-96x96-3352981.png" alt="Image 1">
+          <img src=".img/facebook-96x96-3352981.png" alt="Image 1">
         </div>
       </a>
       <a href="https://www.instagram.com/lef.batas" target="_blank">
         <div class="small-image">
-          <img src="img/instagram-96x96-3352991.png" alt="Image 2">
+          <img src=".img/instagram-96x96-3352991.png" alt="Image 2">
         </div>
       </a>
       <a  href="https://twitter.com/batas89" target="_blank">
         <div class="small-image">
-          <img src="img/twitter-96x96-3352958.png" alt="Image 3">
+          <img src=".img/twitter-96x96-3352958.png" alt="Image 3">
         </div>
       </a>
       <a href="https://www.linkedin.com/in/batas" target="_blank">
         <div class="small-image">
-          <img src="img/linkedin-96x96-3352996.png" alt="Image 4">
+          <img src=".img/linkedin-96x96-3352996.png" alt="Image 4">
         </div>
       </a>
       <a href="https://discord.gg/W62JbD3RFv" target="_blank">
         <div class="small-image">
-          <img src="img/discord-96x96-3352977.png" alt="Image 5">
+          <img src=".img/discord-96x96-3352977.png" alt="Image 5">
         </div>
       </a>
       <a href="#">
         <div class="small-image">
-          <img src="img/youtube-96x96-3352966.png" alt="Image 6">
+          <img src=".img/youtube-96x96-3352966.png" alt="Image 6">
         </div>
       </a>
     </div>
