--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       <img src="./img/296098902_10159839234717870_5671165924911182498_n.jpg" alt="Your Image">
     </div>
       <div>
-        <h2>Unified Communications Engineer</h2>
+        <h2>Unified Communications Engineer, BSc</h2>
       </div>
     <div class="small-images">
       <a href="https://www.facebook.com/lef.batas" target="_blank">
